--- a/Project-03-Todo-List/package.json
+++ b/Project-03-Todo-List/package.json
@@ -1,18 +1,23 @@
 {
   "name": "@rehan-warsi/todos",
-  "version": "1.0.0",
-  "description": "a simple command line Todo app using TypeScipt, Node.js and Inquirer.",
+  "version": "1.3.0",
+  "description": "A simple command line Todo app using TypeScipt, Node.js and Inquirer.",
   "main": "main.js",
   "type": "module",
   "bin": {
-    "ATM": "main.js"
+    "TODOS": "main.js"
   },
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Rehan warsi",
+  "keywords": [
+    "RehanWarsi",
+    "PIAIC",
+    "todos",
+    "Node-js",
+    "TypeScipt"
+  ],
+  "author": "Rehan Warsi",
   "license": "ISC",
   "devDependencies": {
     "@types/chalk-animation": "^1.6.1",
@@ -21,6 +26,7 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "chalk-animation": "^2.0.3",
     "inquirer": "^9.2.10"
   }
 }
