--- a/Project-04-Currency Converter/package.json
+++ b/Project-04-Currency Converter/package.json
@@ -5,13 +5,18 @@
   "main": "main.js",
   "type": "module",
   "bin": {
-    "Curency-Converter": "main.js"
+    "Currency-Converter": "main.js"
   },
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "RehanWarsi",
+    "PIAIC",
+    "Currency-Converter",
+    "Node-js",
+    "TypeScript"
+  ],
   "author": "Rehan warsi",
   "license": "ISC",
   "devDependencies": {
@@ -21,6 +26,7 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "chalk-animation": "^2.0.3",
     "inquirer": "^9.2.10"
   }
 }
